# ai-session-tracker-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  dendron.yml  pyproject.toml
.backup/config/: dendron.2026.02.20.184517653.fixSelfContainedVaultsInConfig.yml
.github/agents/: Session Tracked Agent.agent.md
.github/chatmodes/: Session Tracked Agent.chatmode.md
.github/instructions/: journaling.instructions.md  project.instructions.md  session_tracking.instructions.md
.github/prompts/: daily-summary.prompt.md  setup-dendron-vault.prompt.md
.github/workflows/: ci.yml
docs/: PROJECT_PLAN.md  backup-sync-guide.md  service-management.md
docs/journal/: daily.journal.2026.02.20.md  daily.journal.2026.02.21.md  daily.journal.2026.02.23.md  daily.journal.2026.02.25.md  root.md  root.schema.yml
evidence/issue-18/: interactions.json  sessions.json
src/ai_session_tracker_mcp/: README.md  __init__.py  __main__.py  __version__.py  cli.py  config.py  filesystem.py  models.py  presenters.py  server.py  service.py  session_service.py  statistics.py  storage.py
src/ai_session_tracker_mcp/agent_files/agents/: Session Tracked Agent.agent.md
src/ai_session_tracker_mcp/agent_files/chatmodes/: Session Tracked Agent.chatmode.md
src/ai_session_tracker_mcp/agent_files/instructions/: session_tracking.instructions.md
src/ai_session_tracker_mcp/scripts/: ai-session-tracker.ps1
src/ai_session_tracker_mcp/web/: __init__.py  app.py  routes.py
tests/: README.md  __init__.py  conftest.py  test_agent_schema_sync.py  test_cli.py  test_config.py  test_filesystem.py  test_main.py  test_models.py  test_presenters.py  test_server.py  test_service.py  test_session_service.py  test_statistics.py  test_storage.py  test_web.py
tests/acceptance/: test_output_dir_redirect.sh
utilities/: __init__.py  create_issues.py
utils/: analyze_all_source.py  analyze_all_tests.py  single_session_issue.json
